--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,94 @@
     background: #fff;
     color: #000;
 }
+.date{
+    color: #ffffff;
+}
+
+.My-gradient {
+    mask-image: linear-gradient(
+        to right,
+        rgba(0, 0, 0, 0),
+        rgba(0, 0, 0, 1) 10%,
+        rgba(0, 0, 0, 1) 90%,
+        rgba(0, 0, 0, 0)
+    );
+    -webkit-mask-image: linear-gradient(
+        to right,
+        rgba(0, 0, 0, 0),
+        rgba(0, 0, 0, 1) 10%,
+        rgba(0, 0, 0, 1) 90%,
+        rgba(0, 0, 0, 0)
+    );
+    mask-size: 100%;
+    mask-repeat: no-repeat;
+    -webkit-mask-size: 100%;
+    -webkit-mask-repeat: no-repeat;
+}
+.tag-container {
+    position: relative;
+    width: 300px;
+    height: 300px;
+    margin: auto;
+    background-color: #1e293b; /* Tailwind bg-gray-800 */
+    border-radius: 50%;
+    overflow: hidden;
+  }
+  
+  .tag {
+    position: absolute;
+    padding: 5px 10px;
+    background-color: #3b82f6; /* Tailwind bg-blue-500 */
+    color: white;
+    font-size: 14px;
+    font-weight: bold;
+    border-radius: 50px;
+    animation: float 5s ease-in-out infinite;
+  }
+  
+  .tag-0 {
+    top: 10%;
+    left: 20%;
+    animation-delay: 0s;
+  }
+  
+  .tag-1 {
+    top: 40%;
+    left: 70%;
+    animation-delay: 1s;
+  }
+  
+  .tag-2 {
+    top: 80%;
+    left: 30%;
+    animation-delay: 2s;
+  }
+  
+  .tag-3 {
+    top: 50%;
+    left: 10%;
+    animation-delay: 3s;
+  }
+  
+  .tag-4 {
+    top: 20%;
+    left: 50%;
+    animation-delay: 4s;
+  }
+  
+  @keyframes float {
+    0%, 100% {
+      transform: translateY(0px);
+    }
+    50% {
+      transform: translateY(-20px);
+    }
+  }
+
+  
+  dialog:not([open]) {
+    display: none;
+  }
+  
+  /* background-color: #4158D0;
+background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%); */
